// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserPage> when the user has failed to load should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      <a>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user-lock pr-1"
          data-icon="user-lock"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H392.6c-5.4-9.4-8.6-20.3-8.6-32V352c0-2.1 .1-4.2 .3-6.3c-31-26-71-41.7-114.6-41.7H178.3zM528 240c17.7 0 32 14.3 32 32v48H496V272c0-17.7 14.3-32 32-32zm-80 32v48c-17.7 0-32 14.3-32 32V480c0 17.7 14.3 32 32 32H608c17.7 0 32-14.3 32-32V352c0-17.7-14.3-32-32-32V272c0-44.2-35.8-80-80-80s-80 35.8-80 80z"
            fill="currentColor"
          />
        </svg>
        Change Password
      </a>
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user has successfully loaded should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Alan Bradley
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            alan.bradley@example.com
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            User
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      <a>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user-lock pr-1"
          data-icon="user-lock"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H392.6c-5.4-9.4-8.6-20.3-8.6-32V352c0-2.1 .1-4.2 .3-6.3c-31-26-71-41.7-114.6-41.7H178.3zM528 240c17.7 0 32 14.3 32 32v48H496V272c0-17.7 14.3-32 32-32zm-80 32v48c-17.7 0-32 14.3-32 32V480c0 17.7 14.3 32 32 32H608c17.7 0 32-14.3 32-32V352c0-17.7-14.3-32-32-32V272c0-44.2-35.8-80-80-80s-80 35.8-80 80z"
            fill="currentColor"
          />
        </svg>
        Change Password
      </a>
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user has successfully loaded when the user clicks the Change Password link should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Alan Bradley
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            alan.bradley@example.com
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            User
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      <form
        action="#"
        class="w-full lg:w-1/2 relative"
      >
        <div
          class=""
        >
          <div
            class="form-field"
          >
            <label
              class="form-label"
              for="old_password"
            >
              Old Password
            </label>
            <input
              class="form-input"
              id="old_password"
              name="oldPassword"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-field"
          >
            <label
              class="form-label"
              for="new_password"
            >
              New Password
            </label>
            <input
              class="form-input"
              id="new_password"
              name="newPassword"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-field"
          >
            <label
              class="form-label"
              for="confirm_password"
            >
              Confirm Password
            </label>
            <input
              class="form-input"
              id="confirm_password"
              name="confirmPassword"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="gap-3 sm:grid sm:grid-cols-1 lg:grid-cols-2"
        >
          <button
            class="form-button"
            type="button"
          >
            Cancel
          </button>
          <button
            class="form-button button-info"
            type="submit"
          >
            Update Password
          </button>
        </div>
      </form>
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user is loading should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <div
        class="form-loading-overlay absolute grid h-full place-content-center w-full"
      >
        <div
          class="inline-block text-center"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-user h-10 w-10"
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
              fill="currentColor"
            />
          </svg>
          <br />
          Loading User...
        </div>
      </div>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      Loading...
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
